[gd_scene load_steps=11 format=2]

[ext_resource path="res://Game Objects/Enemies/enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Game Objects/Enemies/empty/woodeater_empty.gd" type="Script" id=2]
[ext_resource path="res://sprites/enemy sprites/woodeate_idle.png" type="Texture" id=3]
[ext_resource path="res://sprites/enemy sprites/woodeate_move.png" type="Texture" id=4]
[ext_resource path="res://sprites/enemy sprites/woodeate_attack.png" type="Texture" id=5]

[sub_resource type="Animation" id=1]

resource_name = "attack"
length = 0.7
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Attack_Sprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 4, 0 ), Vector2( 4, -8 ), Vector2( 4, 0 ) ]
}

[sub_resource type="Animation" id=2]

resource_name = "idle"
length = 0.4
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Idle_Sprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=3]

resource_name = "move"
length = 0.35
loop = true
step = 0.07
tracks/0/type = "value"
tracks/0/path = NodePath("Move_Sprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.07, 0.14, 0.21, 0.28 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=4]

resource_name = "stun"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Stun_Sprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="RectangleShape2D" id=5]

custom_solver_bias = 0.0
extents = Vector2( 9.99699, 7 )

[node name="Woodeater" instance=ExtResource( 1 )]

collision_mask = 289
script = ExtResource( 2 )

[node name="jump_cast_head" parent="." index="0"]

enabled = false

[node name="jump_cast_feet" parent="." index="1"]

enabled = false

[node name="PhysicsCollider" parent="." index="2"]

disabled = true

[node name="Idle_Sprites" type="Sprite" parent="." index="3"]

visible = false
texture = ExtResource( 3 )
hframes = 2
frame = 1
_sections_unfolded = [ "Animation" ]

[node name="Stun_Sprites" type="Sprite" parent="." index="4"]

visible = false
texture = ExtResource( 3 )
hframes = 2
frame = 1
_sections_unfolded = [ "Animation" ]

[node name="Move_Sprites" type="Sprite" parent="." index="5"]

texture = ExtResource( 4 )
hframes = 5
frame = 3
_sections_unfolded = [ "Animation", "Region" ]

[node name="Attack_Sprites" type="Sprite" parent="." index="6"]

visible = false
texture = ExtResource( 5 )
hframes = 7
_sections_unfolded = [ "Animation" ]

[node name="animator" type="AnimationPlayer" parent="." index="7"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/attack = SubResource( 1 )
anims/idle = SubResource( 2 )
anims/move = SubResource( 3 )
anims/stun = SubResource( 4 )
blend_times = [  ]

[node name="DamagePlayerArea" parent="." index="8"]

collision_layer = 114696

[node name="DamageCollider" parent="DamagePlayerArea" index="0"]

disabled = true

[node name="States" parent="." index="9"]

editor/display_folded = true

[node name="Default" parent="States" index="0"]

script = null

[node name="Attack" parent="States" index="1"]

script = null

[node name="Chase" parent="States" index="2"]

script = null

[node name="DefaultStun" parent="States" index="3"]

script = null

[node name="ActionTimer" parent="." index="10"]

one_shot = true

[node name="AllHitbox" type="Area2D" parent="." index="11"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 14336
collision_mask = 4
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AllHitbox" index="0"]

shape = SubResource( 5 )
disabled = true

[connection signal="animation_finished" from="animator" to="." method="_on_animator_animation_finished"]

[connection signal="timeout" from="States/DefaultStun/StunTimer" to="States/DefaultStun" method="_on_StunTimer_timeout"]

[connection signal="timeout" from="ActionTimer" to="." method="_on_ActionTimer_timeout"]


